# python-container-demo

./: .dockerignore  .envrc  .gitignore  .trivyignore  Dockerfile  README.md  app.py  build.sh  compose.yaml  flake.nix  main.py  pyproject.toml
.github/: renovate.json
.github/workflows/: build.yml  checks.yml  cleanup-ghcr.yml
src/python_container_demo/: __init__.py  server.py
tests/: test_server.py
